# 3d-gravity-sim

./: .gitattribute  .gitattributes  CMakeLists.txt
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
cmake/: Findglfw3.cmake
include/: debug.hpp  fps.hpp  gl_utilities.hpp  io_utilities.hpp  io_utils.hpp  util.hpp  utilities.hpp  vector3.hpp  window.cpp
include/engine/: fps.hpp  renderer.hpp
include/gfx/: camera.cpp  camera.hpp  gfx.hpp  instance.cpp  instance.hpp  mesh.cpp  mesh.hpp  vertex.hpp
include/glad/: glad.h
include/glu/: buffer.hpp  core.hpp  debug.hpp  glu.hpp  shader.hpp  vao.hpp
include/glw/: buffer.hpp  debug.hpp  gl_utils.hpp  glw.hpp  render.hpp  shader.hpp  vao.hpp
include/physics/: particle.hpp  phy.hpp
include/win/: window.hpp
shaders/: vertexShader.vert
src/: glad.c  main.cpp
src/engine/: renderer.cpp
src/gfx/: camera.cpp  instance.cpp  mesh.cpp
src/win/: window.cpp
